Added Website List w/ Links

--- a/Week1.html
+++ b/Week1.html
@@ -8,10 +8,16 @@
 </head>
 <body>
 <h1>Hello World</h1>
-
-<p>This is a sample page for INFO20005: UI Development</p>
-
-<h2>* this is a test column *</h2>
-
+<h2>Card, Board and Hobby Game Websites:</h2>
+<p>
+<i><b>
+* <a href="https://www.gamesmen.com.au/">Gamesmen</a> *
+<br><br>
+* <a href="https://gameology.com.au">Gameology</a> *
+<br><br>
+* <a href="https://hobbygames.co.nz">Hobby Games</a> *
+</b></i>
+</p>
 </body>
 </html>
+
